@@ -13,6 +13,9 @@ Verilator 5.021 devel
 
 **Minor:**
 
+* Remove deprecated 32-bit pointer mode (`gcc -m32`).
+
+
 
 Verilator 5.020 2024-01-01
 ==========================
